# chainmetric-network

./: .bazelproject  .gitignore  BUILD  Makefile  README.md  WORKSPACE  config.yaml  config_example.yaml  connection_example.yaml  go.mod  go.sum  go_third_party.bzl  network-config.yaml
app/storage/: LOG
assets/: Dockerfile  contract.go  go.mod  go.sum  main.go
assets/model/: asset.pb.go  asset.proto
contracts/: README.md
contracts/assets/: contract.go  main.go
contracts/devices/: commands.go  contract.go  main.go
contracts/readings/: contract.go  main.go
contracts/requirements/: contract.go
data/wallet/keystore/: 28cf959a667b27bbd4e51ecbbca8750c6e0a6b8e2f04602679da4bee6a32ca5f_sk  5d7c9e31d7217f434c2904a2a87333c026b8016abde85a93b05fe91fec8d162a_sk  df2acb8234ccb05d07a24f8708d0653400eb09339d281b2a78edbfdc11361d7f_sk
deploy/charts/api-service/: Chart.yaml  values.yaml
deploy/charts/artifacts/: Chart.yaml  artifacts-wait-job.yaml  values.arm64.yaml  values.yaml
deploy/charts/chaincode/: Chart.yaml  values.yaml
deploy/charts/infrastructure/: Chart.yaml  values.yaml
deploy/charts/orderer/: Chart.yaml  values.arm64.yaml  values.yaml
deploy/config/: mongodb.yaml  traefik.yaml  vault.yaml
deploy/docker/: assets.Dockerfile  devices.Dockerfile  identity.Dockerfile  readings.Dockerfile  requirements.Dockerfile  users.Dockerfile
docker/: assets.Dockerfile  devices.Dockerfile  readings.Dockerfile  requirements.Dockerfile
model/: asset.go  device.go  metric.go  models_couchdb.go  readings.go  requirements.go
model/request/: assets.go  devices.go
model/response/: assets.go  readings.go
model/user/: enroll.go  registration.go  user.go
models/: asset.go  device.go  metric.go  readings.go  requirements.go
models/request/: assets.go  devices.go
models/response/: assets.go  readings.go
orgservices/: README.md
orgservices/identity/: BUILD.bazel  README.md  main.go
orgservices/identity/api/middleware/: BUILD.bazel  auth_grpc.go  ctx_grpc.go  jwt_grpc.go
orgservices/identity/api/presenter/: BUILD.bazel  access.go  access.proto  admin.go  admin.pb.go  admin.pb.validate.go  admin.proto  common.go  common.pb.go  common.proto  user.go  user.pb.go  user.proto  users.go
orgservices/identity/api/proto/access/: BUILD.bazel  access.proto  access_service.proto
orgservices/identity/api/proto/admin/: BUILD.bazel  admin.proto  admin_grpc.proto
orgservices/identity/api/proto/common/: BUILD.bazel  common.proto
orgservices/identity/api/proto/user/: BUILD.bazel  user.pb.go  user.pb.validate.go  user.proto  user_grpc.pb.go  user_grpc.pb.validate.go  user_grpc.proto
orgservices/identity/api/rpc/: BUILD.bazel  access_grpc.go  access_grpc.pb.go  access_grpc.proto  admin_grpc.go  admin_grpc.pb.go  admin_grpc.proto  user_grpc.go  user_grpc.pb.go  user_grpc.proto
orgservices/identity/infrastructure/repository/: BUILD.bazel  users_mongo.go
orgservices/identity/model/: BUILD.bazel  user.go
orgservices/identity/usecase/access/: BUILD.bazel  claims_jwt.go  credentials_fabric.go
orgservices/identity/usecase/identity/: BUILD.bazel  client.go  enroll.go  identities.go  register.go  register_options.go
orgservices/identity/usecase/privileges/: BUILD.bazel  init.go
orgservices/notifications/: BUILD.bazel  README.md  main.go
orgservices/notifications/api/presenter/: BUILD.bazel  events.proto  subscription.go  subscription.proto
orgservices/notifications/api/rpc/: BUILD.bazel  subscriber_grpc.go  subscriber_grpc.proto
orgservices/notifications/data/: privileges.yaml
orgservices/notifications/infrastructure/repository/: BUILD.bazel  eventconcerns_mongo.go  subscriptions_mongo.go
orgservices/notifications/infrastructure/services/: BUILD.bazel  notifications_firebase.go
orgservices/notifications/model/: eventconcern.go  notification.go  subscriber.go  subscription.go  ticket.go
orgservices/notifications/model/audience/: BUILD.bazel  notification.go  subscription.go
orgservices/notifications/model/events/: BUILD.bazel  requirement_violation.go
orgservices/notifications/model/intention/: BUILD.bazel  eventconcern_base.go  eventconcern_interface.go
orgservices/notifications/usecase/eventproxy/: BUILD.bazel  eventloop.go  forwarding.go  listeners.go  receivers.go
orgservices/shared/core/: BUILD.bazel  bootstrap.go  config.go  core.go  fabric.go  firebase.go  mongodb.go  vault.go
orgservices/shared/infrastructure/repository/: BUILD.bazel  users_mongo.go
orgservices/shared/middleware/: BUILD.bazel  ctx_grpc.go  firebase_grpc.go  jwt_grpc.go
orgservices/shared/proto/: BUILD.bazel  status.go
orgservices/shared/server/: BUILD.bazel  options.go  server.go
orgservices/shared/usecase/privileges/: BUILD.bazel  init.go
orgservices/shared/utils/: BUILD.bazel  utils.go
requirements/: Dockerfile  contract.go  go.mod  go.sum  main.go
requirements/model/: requirement.pb.go  requirement.proto
services/: README.md
services/identity/: main.go
shared/: bootstrap.go  core.go  couchdb.go  env.go  leveldb.go  logger.go  mongodb.go  utils.go
shared/core/: bootstrap.go  config.go  core.go  env.go  leveldb.go  logger.go  mongodb.go
shared/server/: options.go  server.go
shared/utils/: utils.go
smartcontracts/: README.md
smartcontracts/assets/: BUILD.bazel  README.md  contract.go  main.go
smartcontracts/devices/: BUILD.bazel  README.md  commands.go  contract.go  main.go
smartcontracts/readings/: BUILD.bazel  README.md  contract.go  event_socket.go  main.go
smartcontracts/readings/usecase/validation/: BUILD.bazel  cache.go  requirements_cache.go  rules.go  validation.go
smartcontracts/requirements/: BUILD.bazel  README.md  contract.go  main.go
smartcontracts/shared/core/: BUILD.bazel  bootstrap.go  chaincode.go  core.go  couchdb.go  env.go  logger.go
smartcontracts/shared/utils/: BUILD.bazel  utils.go
src/assets/: contract.go  main.go
src/devices/: commands.go  contract.go  main.go
src/identity/: main.go
src/readings/: contract.go  event_socket.go  main.go
src/requirements/: contract.go  main.go
src/users/: doc.go  main.go
(+169 files in other folders)
