load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "identity_lib",
    srcs = ["main.go"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/identity",
    visibility = ["//visibility:private"],
    deps = [
        "//orgservices/identity/api/middleware",
        "//orgservices/identity/usecase/identity",
        "//orgservices/identity/usecase/privileges",
        "//orgservices/shared/core",
        "//orgservices/shared/server",
        "//orgservices/shared/utils",
    ],
)

go_binary(
    name = "identity",
    embed = [":identity_lib"],
    visibility = ["//visibility:public"],
)
