load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//build/docker:multiarch.bzl", "multiarch_image")

go_library(
    name = "identity_lib",
    srcs = ["main.go"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/identity",
    visibility = ["//visibility:private"],
    deps = [
        "//orgservices/identity/api/middleware",
        "//orgservices/identity/api/rpc",
        "//orgservices/identity/usecase/identity",
        "//orgservices/identity/usecase/privileges",
        "//orgservices/shared/core",
        "//orgservices/shared/server",
        "//orgservices/shared/utils",
    ],
)

go_binary(
    name = "identity",
    embed = [":identity_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "base_image",
    embed = [":identity_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":base_image",
    stamp = True,
    visibility = ["//visibility:public"],
)

multiarch_image(
    name = "multiacrh",
    base = "@alpine//image",
    embed = [":identity_lib"],
    goarch = [
        "amd64",
        "arm64",
    ],
    goos = ["linux"],
    visibility = ["//visibility:public"],
)
