load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "devices_lib",
    srcs = [
        "commands.go",
        "contract.go",
        "main.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/smartcontracts/devices",
    visibility = ["//visibility:private"],
    deps = [
        "//smartcontracts/shared/core",
        "//smartcontracts/shared/model/couchdb",
        "//smartcontracts/shared/utils",
        "@com_github_hyperledger_fabric_chaincode_go//shim:go_default_library",
        "@com_github_hyperledger_fabric_contract_api_go//contractapi:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_timoth_y_chainmetric_core//models:go_default_library",
        "@com_github_timoth_y_chainmetric_core//models/requests:go_default_library",
        "@com_github_timoth_y_chainmetric_core//utils:go_default_library",
        "@com_github_ztrue_shutdown//:go_default_library",
    ],
)

go_binary(
    name = "devices",
    embed = [":devices_lib"],
    visibility = ["//visibility:public"],
)
