load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("//build/docker:multiarch.bzl", "multiarch_image")

go_library(
    name = "readings_lib",
    srcs = [
        "contract.go",
        "event_socket.go",
        "main.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/smartcontracts/readings",
    visibility = ["//visibility:private"],
    deps = [
        "//smartcontracts/readings/usecase/validation",
        "//smartcontracts/shared/core",
        "//smartcontracts/shared/model/couchdb",
        "//smartcontracts/shared/model/response",
        "//smartcontracts/shared/utils",
        "@com_github_hyperledger_fabric_chaincode_go//shim",
        "@com_github_hyperledger_fabric_contract_api_go//contractapi",
        "@com_github_pkg_errors//:errors",
        "@com_github_syndtr_goleveldb//leveldb/util",
        "@com_github_timoth_y_chainmetric_core//models",
        "@com_github_timoth_y_chainmetric_core//utils",
        "@com_github_ztrue_shutdown//:shutdown",
    ],
)

go_binary(
    name = "readings",
    embed = [":readings_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "base_image",
    embed = [":readings_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":base_image",
    repository = "chainmetric",
    stamp = True,
    visibility = ["//visibility:public"],
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "chainmetric/readings-contract",
    visibility = ["//visibility:public"],
)

multiarch_image(
    name = "multiacrh",
    base = "@alpine//image",
    embed = [":readings_lib"],
    goarch = [
        "amd64",
        "arm64",
    ],
    goos = ["linux"],
    visibility = ["//visibility:public"],
)
