load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = ["user.go"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/identity/model",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_viper//:viper",
        "@com_github_timoth_y_chainmetric_core//utils",
    ],
)
