load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = [
        "config.go",
        "core.go",
        "logger.go",
        "mongodb.go",
        "vault.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/shared/core",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hashicorp_vault_api//:go_default_library",
        "@com_github_op_go_logging//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
    ],
)
