load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = [
        "config.go",
        "core.go",
        "logger.go",
        "mongodb.go",
        "vault.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/shared/core",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hashicorp_vault_api//:api",
        "@com_github_op_go_logging//:go-logging",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_viper//:viper",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
