load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = [
        "bootstrap.go",
        "config.go",
        "core.go",
        "fabric.go",
        "firebase.go",
        "logger.go",
        "mongodb.go",
        "vault.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/shared/core",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/shared/server",
        "//orgservices/shared/utils",
        "@com_github_hashicorp_vault_api//:api",
        "@com_github_hyperledger_fabric_sdk_go//pkg/core/config",
        "@com_github_hyperledger_fabric_sdk_go//pkg/gateway",
        "@com_github_op_go_logging//:go-logging",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_viper//:viper",
        "@com_google_firebase_go_v4//:go",
        "@org_golang_google_api//option",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
