load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "options.go",
        "server.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/shared/server",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/shared/core",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/logrus",
        "@com_github_grpc_ecosystem_go_grpc_middleware//recovery",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
    ],
)
