load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = ["utils.go"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/shared/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/shared/core",
        "@com_github_pkg_errors//:errors",
    ],
)
