load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = [
        "bootstrap.go",
        "core.go",
        "couchdb.go",
        "env.go",
        "leveldb.go",
        "logger.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/smartcontracts/shared/core",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hyperledger_fabric_chaincode_go//shim",
        "@com_github_hyperledger_fabric_contract_api_go//contractapi",
        "@com_github_op_go_logging//:go-logging",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_viper//:viper",
        "@com_github_syndtr_goleveldb//leveldb",
        "@com_github_timoth_y_chainmetric_core//utils",
    ],
)
