load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@golink//proto:proto.bzl", "go_proto_link")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rpc",
    srcs = [
        "access_grpc.go",
        "admin_grpc.go",
        "user_grpc.go",
    ],
    embed = [":rpc_go_proto"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/identity/api/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/identity/api/presenter",
        "//orgservices/identity/infrastructure/repository",
        "//orgservices/identity/model",
        "//orgservices/identity/usecase/access",
        "//orgservices/identity/usecase/identity",
        "//orgservices/identity/usecase/privileges",
        "//orgservices/shared/core",
        "//orgservices/shared/middleware",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)

proto_library(
    name = "rpc_proto",
    srcs = [
        "access_grpc.proto",
        "admin_grpc.proto",
        "user_grpc.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/identity/api/presenter:presenter_proto",
        "//orgservices/shared/proto:proto_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "rpc_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/identity/api/rpc",
    proto = ":rpc_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/identity/api/presenter",
        "//orgservices/shared/proto",
    ],
)

go_proto_link(
    name = "rpc_go_proto_link",
    dep = ":rpc_go_proto",
    version = "v1",
)
