load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = [
        "identities_vault.go",
        "users_mongo.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/identity/infrastructure/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/identity/model",
        "@com_github_hashicorp_vault_api//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
    ],
)
