load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = [
        "identities_vault.go",
        "users_mongo.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/identity/infrastructure/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/identity/model",
        "@com_github_hashicorp_vault_api//:api",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_viper//:viper",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
