load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "identity",
    srcs = [
        "client.go",
        "enroll.go",
        "enroll_options.go",
        "identities.go",
        "register.go",
        "register_options.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/identity/usecase/identity",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/identity/infrastructure/repository",
        "//orgservices/identity/model",
        "//orgservices/shared/core",
        "//orgservices/shared/usecase/privileges",
        "@com_github_hyperledger_fabric_sdk_go//pkg/client/msp",
        "@com_github_hyperledger_fabric_sdk_go//pkg/common/providers/msp",
        "@com_github_hyperledger_fabric_sdk_go//pkg/core/config",
        "@com_github_hyperledger_fabric_sdk_go//pkg/fabsdk",
        "@com_github_m1_go_generate_password//generator",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
