load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@golink//proto:proto.bzl", "go_proto_link")

proto_library(
    name = "presenter_proto",
    srcs = ["subscription.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:validate_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "presenter_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "//:go_validate",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/notifications/api/presenter",
    proto = ":presenter_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_envoyproxy_protoc_gen_validate//validate:go_default_library"],
)

go_library(
    name = "presenter",
    srcs = ["subscription.go"],
    embed = [":presenter_go_proto"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/notifications/api/presenter",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "presenter_go_proto_link",
    dep = ":presenter_go_proto",
    version = "v1",
)
