load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "eventproxy",
    srcs = [
        "eventloop.go",
        "forwarding.go",
        "listeners.go",
    ],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/notifications/usecase/eventproxy",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/notifications/infrastructure/repository",
        "//orgservices/notifications/infrastructure/services",
        "//orgservices/notifications/model/audience",
        "//orgservices/notifications/model/intention",
        "//orgservices/shared/core",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_spf13_viper//:viper",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
