load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["users_mongo.go"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/shared/infrastructure/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/identity/model",
        "@com_github_spf13_viper//:viper",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
