load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "privileges",
    srcs = ["init.go"],
    importpath = "github.com/timoth-y/chainmetric-network/orgservices/shared/usecase/privileges",
    visibility = ["//visibility:public"],
    deps = [
        "//orgservices/identity/model",
        "//orgservices/shared/core",
        "@com_github_spf13_viper//:viper",
    ],
)
